--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "site_littleson",
   "version": "0.1.0",
   "description": "Site oficial do projeto Little Son",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/Little-Son/site_littleson/issues"
   },
-  "homepage": "https://github.com/Little-Son/site_littleson#readme"
+  "homepage": "https://github.com/Little-Son/site_littleson#readme",
+  "dependencies": {
+    "next": "^10.0.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
