--- a/package.json
+++ b/package.json
@@ -22,8 +22,15 @@
   },
   "homepage": "https://github.com/Little-Son/site_littleson#readme",
   "dependencies": {
+    "graphql-request": "^3.4.0",
     "next": "^10.0.5",
+    "next-auth": "^3.1.0",
+    "next-pwa": "^5.0.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/next-auth": "^3.1.21"
   }
 }
