--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.2.4",
     "date-fns": "^2.17.0",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.2",
     "next": "^10.0.5",
     "next-auth": "^3.3.0",
